trunk/tests/jastadd/negative/type_errors/L3/9_ProcCallVarPars.ob
MODULE TestModule;
	VAR a : INTEGER;
	PROCEDURE f(VAR a : INTEGER);
	BEGIN
		Write(a)
	END f;
BEGIN
	f(a);   (* OK *)
	f(1)    (* NOT OK *)
END TestModule.
